force-app/main/default/objects/Demo_Program__c/Demo_Program__c.object-meta.xml
<CustomObject>
    <label>Demo Program</label>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>Demo Program #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>