force-app/main/default/objects/Demo_Program__c/fields/Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>Approval_Step__c</fullName>
    <label>Approval Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted to Channel Program Manager</fullName>
            </value>
            <value>
                <fullName>Submitted to Dundee Financial Pricing Analyst</fullName>
            </value>
            <value>
                <fullName>Submitted to European Finance Manager</fullName>
            </value>
            <value>
                <fullName>Submitted to Final Approver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>