force-app/main/default/objects/Demo_Program__c/fields/Demo_Price__c.field-meta.xml
<CustomField>
    <fullName>Demo_Price__c</fullName>
    <label>Demo Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>