force-app/main/default/objects/Demo_Program__c/fields/Extended_MSRP_Price__c.field-meta.xml
<CustomField>
    <fullName>Extended_MSRP_Price__c</fullName>
    <label>Extended MSRP Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>