force-app/main/default/objects/Demo_Program__c/fields/LT__c.field-meta.xml
<CustomField>
    <fullName>LT__c</fullName>
    <label>LT</label>
    <length>252</length>
    <type>Text</type>
</CustomField>