force-app/main/default/objects/Demo_Program__c/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Demo Programs</relationshipLabel>
    <relationshipName>Demo_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>