force-app/main/default/objects/Demo_Program__c/fields/Product_Group_NCR_designation__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_NCR_designation__c</fullName>
    <label>Product Group [NCR designation]</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>