force-app/main/default/objects/Demo_Program__c/fields/QTY__c.field-meta.xml
<CustomField>
    <fullName>QTY__c</fullName>
    <label>QTY</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>