force-app/main/default/objects/Demo_Program__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>You have exceeded the amounts allowed in the Demonstration Program</fullName>
            </value>
            <value>
                <fullName>The quantities per unit ordered are excessive</fullName>
            </value>
            <value>
                <fullName>There are discrepancies or errors in the order or file from Quote Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>